test/asm/fragment-mismatch.err
error: fragment-mismatch.asm(2):
    Section already declared as fixed at incompatible address $0000
FATAL: fragment-mismatch.asm(2):
    Cannot create section "test" (1 error)
