test/asm/fragment-mismatch.asm
SECTION FRAGMENT "test", ROM0[0]
SECTION FRAGMENT "test", ROM0[1]
